# dgvgk-bot

./: Pipfile  config_example.yml  pyproject.toml  requirements.txt  run.py
cogs/: __init__.py  admin_cog.py  base_cog.py  mc_cog.py  stats_cog.py  user_cog.py
db/: dgvgkbot.sql
dgvgkbot/: _config.py  bot.py  config.py
dgvgkbot/cogs/: __init__.py  admin_cog.py  base_cog.py  mc_cog.py  stats_cog.py  user_cog.py  vote_cog.py
dgvgkbot/db/: __init__.py  db.py
dgvgkbot/minecraft/: poi.json
dgvgkbot/utils/: access_control.py  checks.py  converters.py  messaging.py  serialize.py
tests/: test_dgvgkbot.py
utils/: checks.py  experimental.py  filesystem.py  serialize.py
