[tool.poetry]
name = "dgvgkbot"
version = "0.1.0"
description = ""
authors = ["PederHA <peder.andresen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6.7"
httpx = "^0.11.1"
recordclass = "^0.13.2"
ciso8601 = "^2.1.3"
mcstatus = "^2.3.0"
"discord.py" = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
